<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background">

    <TextView
        android:id="@+id/TVappName"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_gravity="center"
        android:text="@string/app_name"
        android:textSize="32dp"
        android:textAlignment="center"
        android:textColor="@color/whiteish"
        android:fontFamily="sans-serif-medium"
        android:background="@color/whiteishTransparent"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/abvText"
        android:textSize="25dp"
        android:textColor="@color/whiteish"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="30dp">
    </TextView>
    <EditText
        android:id="@+id/etABV"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/whiteish"
        android:hint="@string/abvHint"
        android:inputType="number"
        android:layout_marginLeft="15dp"
        android:layout_marginBottom="45dp"

        android:textColorHint="@color/whiteish">
    </EditText>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/srmText"
        android:textSize="25dp"
        android:textColor="@color/whiteish"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="15dp">
    </TextView>
    <EditText
        android:id="@+id/etSRM"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/whiteish"
        android:hint="@string/abvHint"
        android:inputType="number"
        android:layout_marginLeft="15dp"
        android:layout_marginBottom="45dp"
        android:textColorHint="@color/whiteish">
    </EditText>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ibuText"
        android:textSize="25dp"
        android:textColor="@color/whiteish"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="15dp">
    </TextView>
    <EditText
        android:id="@+id/etIBU"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/whiteish"
        android:hint="@string/ibuHint"
        android:inputType="number"
        android:layout_marginLeft="15dp"
        android:layout_marginBottom="55dp"
        android:textColorHint="@color/whiteish">
    </EditText>

    <Button
        android:layout_width="190dp"
        android:layout_height="98dp"
        android:layout_gravity="center"
        android:backgroundTint="@color/whiteish"
        android:text="@string/btnDiscover"
        android:textSize="25dp"
        android:textColor="@color/btnDiscoverText"
        android:fontFamily="sans-serif-medium"
        android:onClick="launchResultsActivity"/>

</LinearLayout>


