<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/backgroundhome"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/TVappName"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_gravity="center"
        android:text="@string/app_name"
        android:textSize="32dp"
        android:textAlignment="center"
        android:textColor="@color/whiteish"
        android:fontFamily="sans-serif-medium"
        android:background="@color/whiteishTransparent"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="450dp"
        android:layout_marginTop="70dp"
        android:baselineAlignBottom="true"
        android:scaleType="centerCrop"
        android:padding="70dp"
        android:src="@drawable/home" />
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp">
        <Button
            android:id="@+id/btnStart"
            android:layout_width="150dp"
            android:layout_height="160dp"
            android:layout_gravity="center"
            android:backgroundTint="@color/whiteish"
            android:fontFamily="sans-serif-medium"
            android:onClick="launchPollActivity"
            android:text="@string/btnStart"
            android:layout_marginLeft="15dp"
            android:textColor="@color/navyBlue"
            android:textSize="20dp" />

        <Button
            android:layout_width="150dp"
            android:layout_height="160dp"
            android:layout_gravity="center"
            android:backgroundTint="@color/whiteish"
            android:fontFamily="sans-serif-medium"
            android:onClick="launchBeerList"
            android:text="@string/btnList"
            android:layout_toRightOf ="@+id/btnStart"
            android:layout_marginLeft="25dp"
            android:textColor="@color/navyBlue"
            android:textSize="20dp" />

    </RelativeLayout>
</LinearLayout>